# algobet

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  DEVELOPMENT_TASKS.md  Dockerfile.api  Dockerfile.cron  IFLOW.md  README.md  TODO.md  docker-compose.scheduler.yml  docker-compose.yml  frontend_tasks.md  package-lock.json  pyproject.toml  refactor-todo.md  run_scraper.py
algobet/: __init__.py  cli.py  config.py  database.py  exceptions.py  logging_config.py  models.py  predictions_cli.py  scraper.py
algobet/api/: __init__.py  dependencies.py  main.py
algobet/api/routers/: __init__.py  matches.py  ml_operations.py  models.py  predictions.py  schedules.py  scraping.py  seasons.py  teams.py  tournaments.py  value_bets.py
algobet/api/schemas/: __init__.py  common.py  match.py  model.py  prediction.py  scraping.py  team.py  tournament.py
algobet/api/websockets/: __init__.py  progress.py
algobet/cli/: __init__.py  async_runner.py  container.py  dev_tools.py  error_handler.py  logger.py  presenters.py  scheduled_runner.py  seed_schedules.py
algobet/cli/commands/: __init__.py  analyze.py  async_db.py  async_query.py  db.py  models.py  query.py  train.py
algobet/predictions/: __init__.py
algobet/predictions/data/: __init__.py  queries.py
algobet/predictions/evaluation/: __init__.py  calibration.py  metrics.py  reports.py
algobet/predictions/features/: __init__.py  form_features.py  generators.py  pipeline.py  store.py  transformers.py
algobet/predictions/models/: __init__.py  registry.py
algobet/predictions/training/: __init__.py  calibration.py  classifiers.py  pipeline.py  split.py  tuner.py
algobet/scheduler/: __init__.py  worker.py
algobet/services/: __init__.py  analysis_service.py  async_base.py  async_database_service.py  async_model_management_service.py  async_query_service.py  base.py  database_service.py  dto.py  model_management_service.py  prediction_service.py  query_service.py  scheduler_service.py  scheduler_tasks.py  scraping_service.py
algobet/stubs/: apscheduler.pyi
docker/: crontab
docs/: CLI.md  CLI_IMPROVEMENTS_PLAN.md  CLI_REFACTOR_SUMMARY.md  MIGRATION_GUIDE.md  PHASE1_SUMMARY.md  PHASE3_ARCHITECTURE.md  frontend_development_plan.md  ml_model_design.md  prediction_engine_architecture.md  refactor.md  system-overview.md
docs/api/: README.md
frontend/: .eslintrc.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/app/: error.tsx  layout.tsx  page.tsx  providers.tsx
frontend/app/backtest/: error.tsx  loading.tsx  page.tsx
frontend/app/calibrate/: error.tsx  loading.tsx  page.tsx
frontend/app/matches/: error.tsx  loading.tsx  page.tsx
frontend/app/models/: error.tsx  loading.tsx  page.tsx
frontend/app/predictions/: error.tsx  loading.tsx  page.tsx
frontend/app/schedules/: error.tsx  loading.tsx  page.tsx
frontend/app/scraping/: error.tsx  loading.tsx  page.tsx
frontend/app/teams/: error.tsx  loading.tsx  page.tsx
frontend/app/value-bets/: error.tsx  loading.tsx  page.tsx
frontend/components/: error-boundary.tsx
frontend/components/charts/: performance-trends-chart.tsx
frontend/components/dashboard/: quick-actions-panel.tsx  recent-activity-feed.tsx
frontend/components/layout/: Breadcrumb.tsx  Navbar.tsx  Sidebar.tsx  index.ts
frontend/components/matches/: MatchCard.tsx  MatchFilters.tsx  MatchList.tsx
frontend/components/schedules/: ExecutionHistory.tsx  ScheduleCard.tsx  ScheduleForm.tsx  index.ts
frontend/components/scraping/: JobHistoryTable.tsx  ScrapeForm.tsx  (+3 more)
frontend/hooks/: useScrapingProgress.ts
frontend/stores/: filter-store.ts  index.ts  ui-store.ts
tests/: README.md  __init__.py  conftest.py  test_api.py  test_dependencies.py  test_schemas.py  test_scraping_integration.py  test_scraping_router.py  test_scraping_schemas.py  test_websocket_progress.py
tests/integration/: __init__.py  test_di.py
tests/performance/: __init__.py  test_service_performance.py
(+44 files in other folders)
