[project]
name = "algobet"
version = "0.1.0"
description = "Football match database and OddsPortal scraper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0"
]

[project.scripts]
algobet = "algobet.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
